Added Search Page

--- a/Justice-ui/src/App.css
+++ b/Justice-ui/src/App.css
@@ -42,3 +42,12 @@
   color: #fff;
   font-size: 100px;
 }
+
+.infinityScroll {
+  width:100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  background-color: #3CBC8D;
+  color: white;
+}
